--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# FunGame Implement
+FunGame.Implement/Implement/*.cs
+FunGame.Implement/Implement/Implement/*.cs
