添加找回密码，首次尝试使用DataRequest

--- a/FunGame.Desktop/FunGame.Desktop.csproj
+++ b/FunGame.Desktop/FunGame.Desktop.csproj
@@ -58,6 +58,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="UI\Login\ForgetPassword.cs" />
     <Compile Update="UI\Login\Login.cs" />
   </ItemGroup>
 
