--- a/.gitignore
+++ b/.gitignore
@@ -363,6 +363,6 @@ MigrationBackup/
 FodyWeavers.xsd
 
 # FunGame Implement
+/FunGame.Implement/*.cs
 FunGame.Implement/Implement/*.cs
 FunGame.Implement/Implement/Implement/*.cs
-/FunGame.Implement/Implement.cs
