匹配房间功能 (#19)
* 匹配房间 第一部分

* 修复开始匹配后按钮可用状态异常问题

* 优化匹配结果弹窗

* 优化匹配结束的UI变化

* 匹配成功后进入房间

* 需要再次检查匹配状态

---------

Co-authored-by: yeziuku <yezi@wrss.org>

--- a/.gitignore
+++ b/.gitignore
@@ -363,5 +363,6 @@ MigrationBackup/
 FodyWeavers.xsd
 
 # FunGame Implement
+/FunGame.Implement/*.cs
 FunGame.Implement/Implement/*.cs
 FunGame.Implement/Implement/Implement/*.cs
