--- a/FunGame.Desktop/FunGame.Desktop.csproj
+++ b/FunGame.Desktop/FunGame.Desktop.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -40,8 +40,7 @@
 
   <ItemGroup>
     <Reference Include="FunGame.Core">
-      <HintPath>..\..\FunGame.Core\bin\Debug\net7.0\FunGame.Core.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\FunGame.Core\bin\Debug\net8.0\FunGame.Core.dll</HintPath>
     </Reference>
   </ItemGroup>
 
