添加无边框窗体可拖放

--- a/FunGame.Desktop/FunGame.Desktop.csproj
+++ b/FunGame.Desktop/FunGame.Desktop.csproj
@@ -20,6 +20,7 @@
     <AssemblyVersion>1.0</AssemblyVersion>
     <FileVersion>1.0</FileVersion>
     <RootNamespace>Milimoe.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+    <UseWPF>True</UseWPF>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -35,13 +36,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\FunGame.Core\FunGame.Core.csproj" />
     <ProjectReference Include="..\FunGame.Implement\FunGame.Implement.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="FunGame.Core">
-      <HintPath>..\..\FunGame.Core\bin\Debug\net9.0\FunGame.Core.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
   <ItemGroup>
